<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zero_controller</name>
  <version>0.0.0</version>
  <description>Zenith Space main controller node</description>
  <maintainer email="yoongu@email.com">Yoongu Kang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>zenith_interfaces</depend>
  <depend>behaviortree_cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>lifecycle_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>